@@ -1,6 +1,10 @@
 # ChangeLog for media-tv/xdtv
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-tv/xdtv/Attic/ChangeLog,v 1.51 2007/07/22 09:03:16 dberkholz Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-tv/xdtv/Attic/ChangeLog,v 1.52 2007/11/27 10:14:40 zzam Exp $
+
+  27 Nov 2007; Matthias Schwarzott <zzam@gentoo.org> xdtv-2.2.0-r1.ebuild,
+  xdtv-2.4.0.ebuild:
+  Fixed quoting.
 
   22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; xdtv-2.2.0-r1.ebuild,
   xdtv-2.4.0.ebuild:
